src/test/deca/syntax/invalid/decaObjet/emptyClass/00classTokenInvalid.deca
// Description:
//    tests de programme incorrect lexicalement (token 'clas' non reconnu)
//
// Resultats:
//    00classTokenInvalid.deca:1:0:
//
// Historique:
//    cree le 13/06/2022

clas A {
}
{  
}